                         C H A N G E   L O G
=====================================================================


Version 0.2a  2011-01-???
    Major API changes:
    * stats has now been split up into a package with separate sub-modules.
    * Single-pass versions of variance and friends have been re-written as
      coroutines.
    * Running the package from the command line runs all doctests. See 
      `python3 -m stats --help` for further details.

    Known issues:
    * none yet :)


Version 0.1.2a  2010-12-31
    * Clean up most functions.
    * Added six new statistics functions:
      midhinge, quartile_skewness, cumulative_sum, running_sum,
      stderrskewness, stderrkurtosis
    * Hinges are now also available as a dedicated function, as well as
      via the quartile function.
    * Emulate all nine of R's quantile types, plus one that R doesn't
      include, plus Mathematica's parameterized quantiles.
    * The private module containing quantile code has been merged with
      the main module. Apart from tests, all code is (temporarily) now
      in one file.
    * Many more tests. There are now more lines of code in the tests than in
      the library (approx. 2:1 excluding docstrings, blanks and comments.)
    * skew renamed to skewness.
    * qcorr now returns NAN if all the data points lie on the medians,
      and raises an exception if there are no data points.
    * sum, product and friends now include an optional start argument,
      similar to the built-in sum function.
    * Many enhancements and bug fixes, too many to list.

    Known issues:
    * Test coverage is better, but still incomplete.
    * Executable examples and more documentation are needed.
    * Quantile scheme #3 doesn't match the parameterized version.
    * This will be the last version in a single module. The next version
      will (re-)introduce a package structure, which will give more
      flexibility and a better UI.